objects/ESC_Case_Creation_Field_Mapping__mdt.object
<CustomObject>
    <description>This custom metadata to be used to determine the field values while creating ESC cases.</description>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Value__c</fullName>
        <label>Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Type__c</fullName>
        <label>Integration Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Identifier__c</fullName>
        <label>Unique Identifier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>ESC Case Creation Field Mapping</label>
    <pluralLabel>ESC Case Creation Field Mappings</pluralLabel>
</CustomObject>